# pathlike

./: README.md  pathlike.py  setup.cfg
