[metadata]
name = pathlike
version = 0.0.1
description = Pathlike Parsing
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities
    Development Status :: 5 - Production/Stable
keywords = svg-path, cli, parser
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/Tatarize/pathlike
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

